# Tank

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/skills/async-patterns/: SKILL.md
.github/skills/clean-code-architecture/: SKILL.md
.github/skills/git-workflow/: SKILL.md
.github/skills/python-type-safety/: SKILL.md
.github/workflows/: tests.yml
example/: app.py  client.py
tank/: __init__.py  py.typed
tank/ai/: __init__.py  agents.py  browser.py  graph.py  guardrails.py  llm.py  memory.py  orchestration.py  prompts.py  tools.py
tank/ai/rag/: __init__.py  connectors.py  embeddings.py  reranker.py  retriever.py  splitters.py  vectorstores.py
tank/cli/: __init__.py  main.py
tank/client/: tank-client.js
tank/core/: __init__.py  app.py  config.py  middleware.py  observability.py  response.py  routing.py  tasks.py
tests/: __init__.py  conftest.py  test_advanced_tools.py  test_agents.py  test_approval_gates.py  test_cli.py  test_config.py  test_observability.py  test_phase3_features.py  test_phase4_features.py  test_rag.py  test_response_model.py  test_routes.py  test_tools.py
